Convert from nginx to LiteSpeed web server support
Major changes:
- Update outage_snapshot.py to support LiteSpeed instead of nginx:
  * Replace nginx paths with LiteSpeed paths (/usr/local/lsws/)
  * Add support for LiteSpeed virtual host configs and main config
  * Add LSPHP configuration file collection
  * Update log parsing for LiteSpeed log formats
  * Add multiple log source locations (RunCloud + LiteSpeed native)
  * Improve permission handling for LiteSpeed configs

- Update README.md for LiteSpeed Edition:
  * Replace all nginx references with LiteSpeed
  * Add LiteSpeed-specific installation and configuration instructions
  * Include LiteSpeed troubleshooting and debugging sections
  * Document LiteSpeed virtual host and LSPHP configuration access
  * Add performance considerations for LiteSpeed environments

- Update watcher_sites.conf.example:
  * Add comprehensive comments explaining LiteSpeed usage
  * Include more example configurations
  * Document PHP version usage for LSPHP configs

- Fix Python compatibility issues for older Python versions

This version is now optimized for LiteSpeed web server environments,
particularly those managed by RunCloud hosting platform.

--- a/watcher_sites.conf.example
+++ b/watcher_sites.conf.example
@@ -1,5 +1,14 @@
-# Configuration file for multi-site outage detection
+# Configuration file for multi-site outage detection (LiteSpeed Edition)
 # Format: AppName PHPVersion WebAppPath URL
-# Example entries:
-my-cool-site 8.1 /home/runcloud/webapps/my-cool-site https://my-cool-site.com
-another-site 8.2 /home/runcloud/webapps/another-site https://another-site.com
+#
+# Parameters:
+# - AppName: Unique identifier for the application (used in logs and reports)
+# - PHPVersion: PHP version (e.g., 8.1, 8.2, 8.3) - used for LSPHP and PHP-FPM configs
+# - WebAppPath: Absolute path to the web application's root directory
+# - URL: Full URL to monitor (including https:// or http://)
+#
+# Example entries for LiteSpeed web server:
+my-website 8.1 /home/runcloud/webapps/my-website https://my-website.com
+api-service 8.2 /home/runcloud/webapps/api-service https://api.my-website.com
+blog-site 7.4 /home/runcloud/webapps/blog-site https://blog.my-website.com
+ecommerce-store 8.3 /home/runcloud/webapps/ecommerce-store https://store.my-website.com
